--- a/css/style.css
+++ b/css/style.css
@@ -14,11 +14,11 @@
 }
 @font-face {
     font-family: 'roboto_bold';
-    src: url('../fonts/Roboto-Light.eot');
-    src: url('../fonts/Roboto-Light.eot?#iefix') format('embedded-opentype'),
-         url('../fonts/Roboto-Light.woff') format('woff'),
-         url('../fonts/Roboto-Light.ttf') format('truetype'),
-         url('../fonts/Roboto-Light.svg#latina_essentialbold') format('svg');
+    src: url('../fonts/Roboto-Bold.eot');
+    src: url('../fonts/Roboto-Bold.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/Roboto-Bold.woff') format('woff'),
+         url('../fonts/Roboto-Bold.ttf') format('truetype'),
+         url('../fonts/Roboto-Bold.svg#latina_essentialbold') format('svg');
     font-weight: normal;
     font-style: normal;
 }
@@ -32,6 +32,7 @@ body {
 }
 
 a {
+    font-family:'roboto_bold;
     font-weight: 900;
     color: black;
     text-decoration: none;
@@ -40,7 +41,7 @@ a {
 /*===== MENU =====*/
 /*================*/
 nav {
-    position:absolute;
+    position:fixed;
     width:100%;
     top:0;
     /*border:1px solid;*/
@@ -112,10 +113,11 @@ nav li a {
     box-shadow: 0px 0px 5px 2px #9E9E9E;
 }
 .page {
-    margin-top: 200px;
+    margin-top: 13%;
     width: 90%;
     margin-left: auto;
     margin-right: auto;
+    text-align: justify;
 }
 
 #entete {
@@ -167,4 +169,18 @@ nav li a {
 }
 #button_css:active {
     background-color: #757575;
+}
+
+.image {
+    width: 90%;
+    margin: auto;
+    box-shadow:0px 0px 5px 2px #BDBDBD;
+}
+.image h2 {
+    text-align: center;
+    padding-top: -1%;
+}
+.image img {
+    width: 100%;
+    margin: auto;
 }
