--- a/css/style.css
+++ b/css/style.css
@@ -43,7 +43,7 @@ a {
 nav {
     position:fixed;
     width:100%;
-    top:0;
+    top:1%;
     /*border:1px solid;*/
 }
 nav ul {
@@ -84,7 +84,7 @@ nav li a {
 /*===== CONTENU =====*/
 /*===================*/
 .content {
-    width: 90%;
+    width: 70%;
     height: auto;
     margin-left: auto;
     margin-right: auto;
@@ -172,7 +172,7 @@ nav li a {
 }
 
 .image {
-    width: 90%;
+    width: 80%;
     margin: auto;
     box-shadow:0px 0px 5px 2px #BDBDBD;
 }
