--- a/css/style.css
+++ b/css/style.css
@@ -31,8 +31,12 @@ body {
    /* background: linear-gradient(red,orange,yellow,green,blue,purple) no-repeat;*/
 }
 
+strong {
+    font-family: 'roboto_bold';
+}
+
 a {
-    font-family:'roboto_bold;
+    font-family:'roboto_bold';
     font-weight: 900;
     color: black;
     text-decoration: none;
@@ -44,28 +48,25 @@ nav {
     position:fixed;
     width:100%;
     top:1%;
-    /*border:1px solid;*/
 }
 nav ul {
     margin-top:0;
     width:fit-content;
     min-width: 60%;
     padding:0;
-    /*box-shadow: 0px 0px 5px 2px #BDBDBD;*/
-    /*border:1px solid red;*/
 }
 nav li{
     position:relative;
     list-style: none;
     display:inline-block;
-    width:32%;
+    width:24%;
     height:100%;
     float:left;
     line-height: 5em;
     text-align: center;
     background-color: #FFD180;
     box-shadow: 0px 5px 2px #BDBDBD, 0px 0px 0px transparent, 0px 0px 0px transparent, 0px 0px 0px transparent;
-    /*border:1px solid green;*/
+    /*box-shadow: 0px 0px 5px 2px #BDBDBD;*/
 }
 nav li:hover {
     background-color: #FF9100;
@@ -79,6 +80,9 @@ nav li a {
     -o-transition: all 100ms linear;
     -ms-transition: all 100ms linear;
     transition: all 100ms linear;
+}
+footer {
+    height: 1%;
 }
 /*===================*/
 /*===== CONTENU =====*/
@@ -98,48 +102,48 @@ nav li a {
     border-radius: 3px;
 }
 .content_tuto {
-    width: 90%;
+    width: 70%;
     height: fit-content;
     margin-left: auto;
     margin-right: auto;
     left:0;
     right:0;
-    top: 0;
-    bottom:0;
+    top: 1%;
+    bottom:1%;
     position: absolute;
     padding-top: 1%;
     padding-bottom: 5%;
     background-color: #FFF;
     box-shadow: 0px 0px 5px 2px #9E9E9E;
+    border: 1px solid #9E9E9E;
 }
 .page {
     margin-top: 13%;
-    width: 90%;
+    width: 85%;
     margin-left: auto;
     margin-right: auto;
     text-align: justify;
 }
-
 #entete {
     background-color: #FFF;
     width: 85%;
     margin: auto;
+    padding-top: 1%;
+    padding-bottom: 1%;
     text-align: center;
-    box-shadow: 0px 0px 5px 2px #BDBDBD;
+    box-shadow: 2px 2px 5px 2px #BDBDBD;
     border-radius: 3px;
 }
-
 #home_buttons {
     width: 85%;
     margin: auto;
     margin-top: 5%;
 }
-
 #button_html {
     width:200px;
     height: 50px;
     background-color: #FFF ;
-    box-shadow: 0px 0px 5px 2px #BDBDBD;
+    box-shadow: 2px 2px 5px 2px #BDBDBD;
     float: left;
     margin-left: 15%;
     text-align: center;
@@ -152,12 +156,11 @@ nav li a {
 #button_html:active {
     background-color: #757575
 }
-
 #button_css {
     width: 200px;
     height: 50px;
     background-color: #FFF;
-    box-shadow: 0px 0px 5px 2px #BDBDBD;
+    box-shadow: 2px 2px 5px 2px #BDBDBD;
     float: right;
     margin-right: 15%;
     text-align: center;
@@ -170,11 +173,10 @@ nav li a {
 #button_css:active {
     background-color: #757575;
 }
-
 .image {
-    width: 80%;
+    max-width: 60%;
     margin: auto;
-    box-shadow:0px 0px 5px 2px #BDBDBD;
+    box-shadow:2px 2px 5px 2px #BDBDBD;
 }
 .image h2 {
     text-align: center;
