--- a/css/style.css
+++ b/css/style.css
@@ -46,13 +46,13 @@ a {
 /*================*/
 nav {
     position:fixed;
-    width:100%;
+    width:60%;
     top:1%;
 }
 nav ul {
     margin-top:0;
     width:fit-content;
-    min-width: 60%;
+    min-width: 100%;
     padding:0;
 }
 nav li{
@@ -70,6 +70,23 @@ nav li{
 }
 nav li:hover {
     background-color: #FF9100;
+}
+nav li:hover > ul {
+    display:block;
+    visibility: visible;
+}
+nav ul li ul {
+    position: relative;
+    display: none;
+    visibility: none;
+    width: 100%;
+}
+nav li ul li {
+    list-style: none;
+    width:100%;
+}
+nav li ul li a {
+    font-family: 'roboto_light';
 }
 nav li a {
     text-transform: uppercase;
@@ -103,7 +120,9 @@ footer {
 }
 .content_tuto {
     width: 70%;
-    height: fit-content;
+   /* height: fit-content;*/
+    display: block;
+    overflow: auto;
     margin-left: auto;
     margin-right: auto;
     left:0;
